Fixed text which wraps into new lines in the buttons on safari and added missing svg

--- a/public/static/css/modules/ModFrontpage/partials/_top_banner.scss
+++ b/public/static/css/modules/ModFrontpage/partials/_top_banner.scss
@@ -45,6 +45,7 @@
 
   .btn {
     margin-top: 60px;
+    white-space: nowrap;
   }
 
   /* Hide artwork for mobile devices */
